--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 * {
   margin: 0px;
   padding: 0px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
+  color: white;
 }
 html {
   background-color: rgba(17, 17, 17, 1);
@@ -135,7 +136,7 @@ main {
   background-color: rgba(24, 24, 24, 1);
 }
 .main {
-  height: 100vh;
+  height: 139vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(/images/line.png);
@@ -145,5 +146,92 @@ main {
 .first-sec {
   display: flex;
   max-width: 1000px;
-  margin: auto6;
+  margin: auto;
+  padding-top: 100px;
+}
+.first-sec-main-one {
+  width: 100%;
+}
+.main-one-text1 {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  color: white;
+}
+.main-one-text2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 32px;
+  color: white;
+}
+.main-one-sub2 {
+  width: 100%;
+  padding-top: 20px;
+}
+.main-one-sub2 img {
+  width: 90%;
+}
+
+.main-one-sub3 {
+  display: flex;
+  position: relative;
+}
+.main-one-sub3-img1 {
+  position: absolute;
+  bottom: -40px;
+  left: -50px;
+}
+.main-one-sub3-img2 {
+  position: absolute;
+  left: 60%;
+  bottom: -100px;
+  width: 100%;
+  z-index: 1;
+}
+.main-one-sub3-img2 img {
+  width: 63%;
+}
+.first-sec-main-two {
+  width: 50%;
+  position: relative;
+}
+.first-sec-main-img1 {
+  position: absolute;
+  right: -40px;
+}
+.first-sec-main-img2 {
+  position: absolute;
+  left: -50px;
+  top: 70px;
+}
+.first-sec-main-img2 img {
+  z-index: -1;
+  width: 50%;
+}
+.first-sec-main-two-1 {
+  position: absolute;
+  top: 30%;
+}
+.first-sec-main-two-text1 {
+  color: white;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 12px;
+}
+.first-sec-main-two-text2 {
+  color: white;
+  padding-top: 10px;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 13px;
+  padding-bottom: 20px;
+}
+
+/*SECOND SEC*/
+.second-sec {
+  height: 139vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(/images/line.png);
+  background-color: rgba(34, 34, 34, 1);
+}
+.second-sec-main {
+  max-width: 1000px;
+  margin: auto;
+  display: flex;
 }
