--- a/style.css
+++ b/style.css
@@ -73,14 +73,12 @@ nav {
 }
 
 .text1 {
-  color: white;
   font-size: 72px;
   width: 100%;
   font-family: "Inter", sans-serif;
   font-family: "Poppins", sans-serif;
 }
 .text2 {
-  color: white;
   font-family: "Plus Jakarta Sans", sans-serif;
   font-family: "Poppins", sans-serif;
   font-size: 12px;
@@ -154,12 +152,10 @@ main {
 }
 .main-one-text1 {
   font-family: "Plus Jakarta Sans", sans-serif;
-  color: white;
 }
 .main-one-text2 {
   font-family: "Poppins", sans-serif;
   font-size: 32px;
-  color: white;
 }
 .main-one-sub2 {
   width: 100%;
@@ -210,12 +206,10 @@ main {
   top: 30%;
 }
 .first-sec-main-two-text1 {
-  color: white;
   font-family: "Plus Jakarta Sans", sans-serif;
   font-size: 12px;
 }
 .first-sec-main-two-text2 {
-  color: white;
   padding-top: 10px;
   font-family: "Plus Jakarta Sans", sans-serif;
   font-size: 13px;
@@ -224,7 +218,7 @@ main {
 
 /*SECOND SEC*/
 .second-sec {
-  height: 139vh;
+  height: 70vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(/images/line.png);
@@ -234,4 +228,77 @@ main {
   max-width: 1000px;
   margin: auto;
   display: flex;
+  padding-top: 90px;
+}
+.second-sec-ct1 {
+  display: flex;
+  width: 100%;
+  position: relative;
+}
+.second-sec-ct1 img {
+  width: 20%;
+  height: 50%;
+}
+.second-sec-ct2 {
+  display: flex;
+  width: 100%;
+  position: relative;
+}
+.second-sec-ct2 img {
+  width: 20%;
+  height: 50%;
+}
+.second-sec-ct3 {
+  display: flex;
+  width: 100%;
+  position: relative;
+}
+.second-sec-ct3 img {
+  width: 20%;
+  height: 50%;
+}
+.branding {
+  font-family: "Londrina Outline", cursive;
+  font-size: 45px;
+  z-index: 100;
+  right: 125px;
+  position: absolute;
+}
+.interactive {
+  font-family: "Londrina Outline", cursive;
+  font-size: 45px;
+  z-index: 100;
+  right: 85px;
+  position: absolute;
+}
+.illustration {
+  font-family: "Londrina Outline", cursive;
+  font-size: 45px;
+  z-index: 100;
+  right: 85px;
+  position: absolute;
+}
+
+.design {
+  font-family: "Poppins", sans-serif;
+  font-weight: bolder;
+  font-size: 25px;
+  padding-left: 55px;
+}
+.lorem {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  padding-top: 25px;
+  padding-bottom: 15px;
+}
+.second-sec-main-1 ul {
+  padding-left: 15px;
+  line-height: 30px;
+}
+.second-sec-main-2 ul {
+  padding-left: 15px;
+  line-height: 30px;
+}
+.second-sec-main-3 ul {
+  padding-left: 15px;
+  line-height: 30px;
 }
