--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   color: white;
+  /* border: 2px solid red; */
 }
 html {
   background-color: rgba(17, 17, 17, 1);
@@ -401,4 +402,19 @@ main {
   max-width: 1000px;
   margin: auto;
   padding-top: 40px;
+}
+.fifth-sec p {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 14px;
+}
+.fifth-sec-img {
+  width: 55%;
+}
+.fifth-sec-text1 {
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+.fifth-sec-text2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 40px;
+  width: 85%;
 }
