--- a/style.css
+++ b/style.css
@@ -331,6 +331,7 @@ main {
 .third-sec-main-1-sub1-text1 {
   font-family: "Plus Jakarta Sans", sans-serif;
   padding-bottom: 15px;
+  font-size: 12px;
 }
 .third-sec-main-1-sub1-text2 {
   font-family: "Poppins", sans-serif;
@@ -460,5 +461,74 @@ main {
   width: 5%;
 }
 .shape {
-  padding-left: 10%;
+  padding-left: 5%;
+}
+/*SEVENTH SEC */
+.seventh-sec {
+  max-width: 1000px;
+  margin: auto;
+  padding-top: 40px;
+}
+.seventh-sec-main {
+  display: flex;
+  justify-content: space-between;
+}
+.seventh-sec-main1 p {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 13px;
+}
+.seventh-sec-main1 h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.seventh-sec-main2 img {
+  width: 70%;
+}
+
+/* EIGHT SEC*/
+.eight-sec {
+  max-width: 1000px;
+  margin: auto;
+  padding-top: 40px;
+}
+.eight-sec-main {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  width: 100%;
+}
+.eight-sec-sub {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  width: 100%;
+}
+.element {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.feedback {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-top: 20px;
+}
+.author {
+  width: 40%;
+}
+.quote {
+  width: 10%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/*Ninth sec*/
+.ninth-sec {
+  max-width: 1000px;
+  margin: auto;
+  padding-top: 50px;
 }
