--- a/style.css
+++ b/style.css
@@ -330,7 +330,6 @@ main {
 }
 .third-sec-main-1-sub1-text1 {
   font-family: "Plus Jakarta Sans", sans-serif;
-  padding-bottom: 15px;
   font-size: 12px;
 }
 .third-sec-main-1-sub1-text2 {
@@ -343,7 +342,7 @@ main {
   font-size: 14px;
 }
 .third-sec-main-1-sub2 img {
-  width: 55%;
+  width: 45%;
   padding-top: 10%;
 }
 
@@ -531,4 +530,20 @@ main {
   max-width: 1000px;
   margin: auto;
   padding-top: 50px;
+}
+.ninth-sec-img p {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 14px;
+}
+.ninth-sec-img img {
+  width: 30%;
+}
+/*TENTH SEC*/
+.tenth-sec {
+  max-width: 1000px;
+  margin: auto;
+  padding-top: 50px;
+}
+.tenth-sec-main {
+  display: flex;
 }
