--- a/style.css
+++ b/style.css
@@ -576,3 +576,48 @@ main {
 
   /* width: 50%; */
 }
+/*ELEVENTH SECTION*/
+
+.eleventh-section-main {
+  padding-top: 70px;
+  text-align: right;
+  position: relative;
+}
+
+.eleventh-section-main img {
+  width: 90%;
+}
+
+/*LAST SEC*/
+.last-section {
+  width: 100%;
+}
+.bottom-box {
+  background-color: rgba(34, 34, 34, 1);
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
+  height: 50vh;
+  align-items: center;
+  margin-top: -200px;
+  position: absolute;
+}
+
+.bottom-box p {
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 55px;
+}
+.together {
+  color: rgba(227, 178, 125, 1);
+}
+.circle {
+  background-color: rgba(227, 178, 125, 1);
+  padding: 80px 50px;
+  border-radius: 50%;
+  /* text-align: center; */
+}
+.circle h4 {
+  font-size: 12px;
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
