--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ main {
 /*ELEVENTH SECTION*/
 
 .eleventh-section-main {
-  padding-top: 70px;
+  padding-top: 100px;
   text-align: right;
   position: relative;
 }
@@ -591,6 +591,7 @@ main {
 /*LAST SEC*/
 .last-section {
   width: 100%;
+  padding-bottom: 270px;
 }
 .bottom-box {
   background-color: rgba(34, 34, 34, 1);
@@ -620,4 +621,45 @@ main {
 .circle h4 {
   font-size: 12px;
   font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+/*FOOTER*/
+footer {
+  background-color: rgba(17, 17, 17, 1);
+  padding-top: 50px;
+}
+.footer-main {
+  display: flex;
+  justify-content: space-around;
+  max-width: 1000px;
+  gap: 480px;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.about {
+  display: flex;
+}
+.footer-main-1 {
+  width: 100%;
+}
+.footer-main-1 p {
+  width: 100%;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 13px;
+}
+.footer-main-1 img {
+  width: 35%;
+}
+.footer-main-2 {
+  width: 100%;
+}
+.quick {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+}
+.about p {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 12px;
 }
