--- a/style.css
+++ b/style.css
@@ -663,3 +663,27 @@ footer {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-size: 12px;
 }
+.footer-line {
+  max-width: 1000px;
+  margin: auto;
+}
+.footer-line img {
+  width: 100%;
+}
+.footer-attribute {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.footer-attribute p {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 11px;
+}
+.david {
+  color: rgba(227, 178, 125, 1);
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+}
