--- a/style.css
+++ b/style.css
@@ -75,7 +75,20 @@ nav {
   padding-top: 10px;
   padding-left: 20px;
 }
-
+.hero-right-counter {
+  padding-top: 60px;
+}
+.counter {
+  padding-bottom: 20px;
+}
+.counter p {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 15px;
+}
+.count-flex {
+  display: flex;
+  gap: 2px;
+}
 .text1 {
   font-size: 72px;
   width: 100%;
@@ -86,7 +99,7 @@ nav {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-family: "Poppins", sans-serif;
   font-size: 12px;
-  width: 80%;
+  width: 100%;
 }
 
 .hero-middle {
