--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -2,4 +2,17 @@
   .hero-middle {
     display: none;
   }
+  .nav-middle {
+    display: none;
+  }
+  .nav-right {
+    width: 100%;
+  }
+  .nav-right img {
+    width: 12%;
+  }
+  .menu {
+    display: block;
+    float: right;
+  }
 }
