--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -15,4 +15,22 @@
     display: block;
     float: right;
   }
+
+  .hero-right {
+    width: 90%;
+    flex-direction: column-reverse;
+  }
+
+  .hero-left {
+    text-align: center;
+  }
+  .counter h3 {
+    font-size: 20px;
+  }
+  .counter p {
+    font-size: 10px;
+  }
+  .hero-right-counter {
+    width: 100%;
+  }
 }
