--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -34,4 +34,35 @@
     width: 100%;
     margin-top: -30px;
   }
+  .peanut {
+    display: none;
+  }
+  .hero {
+    padding: 0px 23px;
+  }
+  .scroll {
+    display: none;
+  }
+  .partners {
+    padding: 15px 23px;
+  }
+  .first-sec {
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 23px;
+  }
+  .first-sec-main-two-1 {
+    padding-top: 140px;
+  }
+  .main-one-sub3-img2 {
+    display: none;
+  }
+  .second-sec {
+    margin-top: 120px;
+    padding: 15px 23px;
+  }
+  .second-sec-main {
+    flex-direction: column;
+    text-align: center;
+  }
 }
