--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ main {
 
 /*SECOND SEC*/
 .second-sec {
-  height: 70vh;
+  /* height: 70vh; */
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(/images/line.png);
@@ -245,6 +245,7 @@ main {
   margin: auto;
   display: flex;
   padding-top: 90px;
+  /* border: 2px solid red; */
 }
 .second-sec-ct1 {
   display: flex;
