--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -139,4 +139,26 @@
     font-size: 10px;
     text-align: center;
   }
+  .footer-main {
+    flex-direction: column;
+    gap: 40px;
+    text-align: center;
+    padding: 25px 40px;
+  }
+  .footer-main-2 {
+    width: 100%;
+  }
+  .about {
+    flex-direction: column;
+    width: 100%;
+  }
+  .footer-line {
+    padding: 25px 40px;
+  }
+  .footer-attribute {
+    padding: 25px 40px;
+  }
+  .footer-attribute {
+    font-size: 5px;
+  }
 }
