--- a/style.css
+++ b/style.css
@@ -151,6 +151,11 @@ nav {
   max-width: 850px;
   width: 100%;
 }
+
+.hamburger {
+  display: none;
+}
+
 /* MAIN SECTION */
 main {
   background-color: rgba(24, 24, 24, 1);
