--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -165,3 +165,171 @@
     font-size: 5px;
   }
 }
+
+@media (max-width: 890px) {
+  * {
+    border: none;
+  }
+  .hero-middle {
+    display: none;
+  }
+  .nav-middle {
+    display: none;
+  }
+  .nav-right {
+    width: 50%;
+  }
+  .nav-right img {
+    width: 12%;
+  }
+  .menu {
+    display: block;
+    float: right;
+  }
+
+  .hero-right {
+    width: 90%;
+    flex-direction: column-reverse;
+  }
+
+  .hero-left {
+    text-align: center;
+  }
+  .counter h3 {
+    font-size: 20px;
+  }
+  .counter p {
+    font-size: 10px;
+  }
+  .hero-right-counter {
+    width: 100%;
+    margin-top: -30px;
+  }
+  .peanut {
+    display: none;
+  }
+  .hero {
+    padding: 0px 23px;
+  }
+  .scroll {
+    display: none;
+  }
+  .partners {
+    padding: 15px 23px;
+  }
+  .first-sec {
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 23px;
+    padding-bottom: 620px;
+  }
+  .first-sec-main-two-1 {
+    padding-top: 30px;
+  }
+  .main-one-sub3-img2 {
+    display: none;
+  }
+  .second-sec {
+    /* margin-top: 120px; */
+    /* height: 100%; */
+    padding: 15px 20px;
+  }
+  .second-sec-main {
+    flex-direction: column;
+    text-align: center;
+  }
+  .third-sec-main-1-sub {
+    flex-direction: column;
+    text-align: center;
+    padding: 15px 20px;
+  }
+  .shape2 {
+    display: none;
+  }
+  .third-sec-main-1-sub2 {
+    text-align: center;
+    width: 100%;
+  }
+  .fourth-sec-main-sub {
+    padding: 15px 23px;
+  }
+  .web {
+    font-size: 16px;
+  }
+  .arrow img {
+    width: 60%;
+  }
+  .image-3 {
+    display: none;
+  }
+  .third-sec-main-1-sub1 h1 {
+    width: 100%;
+  }
+  .fifth-sec-img {
+    width: 100%;
+  }
+  .sixth-sec-main {
+    flex-direction: column;
+    padding: 25px 40px;
+  }
+  .seventh-sec-main {
+    padding: 25px 20px;
+  }
+  .eight-sec-main {
+    flex-direction: column;
+    padding: 25px 40px;
+  }
+  .tenth-sec-main-sub2 {
+    display: none;
+  }
+  .tenth-sec-main {
+    flex-direction: column;
+    padding: 25px 40px;
+    text-align: center;
+  }
+  .elevneth-section-main {
+    width: 100%;
+  }
+  .elevneth-section-main img {
+    width: 10%;
+  }
+  .bottom-box {
+    width: 80%;
+    height: 20vh;
+    position: absolute;
+    margin-top: -50px;
+  }
+  .bottom-box p {
+    font-size: 13px;
+  }
+  .circle {
+    padding: 25px 9px;
+    /* border-radius: 100%; */
+  }
+  .circle h4 {
+    font-size: 10px;
+    text-align: center;
+  }
+  .footer-main {
+    flex-direction: column;
+    gap: 40px;
+    text-align: center;
+    padding: 25px 40px;
+  }
+  .footer-main-2 {
+    width: 100%;
+  }
+  .about {
+    flex-direction: column;
+    width: 100%;
+  }
+  .footer-line {
+    padding: 25px 40px;
+  }
+  .footer-attribute {
+    padding: 25px 40px;
+  }
+  .footer-attribute {
+    font-size: 5px;
+  }
+}
